css/style.css
html, body {
	background-color: #000;
	color: #fff;
	font-family: sans-serif;
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
}
a:link, a:visited, a:link h2, a:visited h2 {
	text-decoration: underline;
	color: #fff;
}
a:active, a:hover, a:active h2, a:hover h2 {
	text-decoration: none;
}
hr {
	background-color: #fff;
	border: none;
	height: 3px;
	margin-left: 50px;
	margin-right: 50px;
}
p {
	font-family:'Roboto', sans-serif;
}
.center {
	text-align: center;
}
.tmid { /* center block-level elements */
	margin: 0px auto;
}
.button {
	border: 2px solid #fff;
	border-radius: 2px;
	padding: 6px;
	margin: 2px;
	display: inline-block;
	cursor: pointer;
}
.icon {
	display: block; /* Remove space under image */
}

/* Content */
.grey, .grey a {
	color: #a2a2a2;
}
.content {
	width: calc(100% - 40px);
	max-width: 900px;
	padding: 20px;
}
.dropdownicon {
	display: inline-block;
	bottom: 0;
	-webkit-transition: transform .25s;
	transition: transform .25s;
}
.rotate90 {
	transform: rotate(90deg);
}
#xkcdtitle {
	margin-bottom: 0;
	display: inline-block;
}
#scrollimg {
	background-color: #fff;
	border: solid 5px #fff;
	overflow-x: auto;
	-webkit-overflow-scrolling: touch;
}
#xkcdalttext {
	font-style: italic;
}
#transcripttoggle {
	cursor: pointer;
}
.transcriptcollapsed {
	display:none;
}
input[type=number] {
	color: #fff;
	font-family:'Roboto', sans-serif;
	background-color: #000;
	border: 1px solid #fff;
	border-radius: 2px;
	width: 50px;
	padding: 2px;
	margin: 2px;
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	color: #a2a2a2;
}
::-moz-placeholder { /* Firefox 19+ */
	color: #a2a2a2;
}
:-ms-input-placeholder { /* IE 10+ */
	color: #a2a2a2;
}
:-moz-placeholder { /* Firefox 18- */
	color: #a2a2a2;
}

/* Loading blinking dots */

#dot1, #dot2, #dot3 {
	-webkit-animation-duration: 1s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-timing-function: linear;
	animation-duration: 1s;
	animation-iteration-count: infinite;
	animation-timing-function: linear;
}
#dot1 {
	-webkit-animation-name: dot1;
	animation-name: dot1;
}
@-webkit-keyframes dot1 {
	25% { opacity: 0; }
}
@keyframes dot1 {
	25% { opacity: 0; }
}
#dot2 {
	-webkit-animation-name: dot2;
	animation-name: dot2;
}
@-webkit-keyframes dot2 {
	50% { opacity: 0; }
}
@keyframes dot2 {
	50% { opacity: 0; }
}
#dot3 {
	-webkit-animation-name: dot3;
	animation-name: dot3;
}
@-webkit-keyframes dot3 {
	75% { opacity: 0; }
}
@keyframes dot3 {
	75% { opacity: 0; }
}

/* I stole this scrollbar css https://codepen.io/devstreak/pen/dMYgeO */

#scrollimg::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #F5F5F5;
}
#scrollimg::-webkit-scrollbar {
	width: 12px;
	height: 12px;
	background-color: #F5F5F5;
}
#scrollimg::-webkit-scrollbar-thumb {
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #555;
}

::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3);
	border-radius: 10px;
	background-color: #161616;
}
::-webkit-scrollbar {
	width: 12px;
	height: 12px;
	background-color: #161616;
}
::-webkit-scrollbar-thumb {
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #c4c4c4;
}
::-webkit-scrollbar-thumb:hover {
	background-color: #aaa;
}

